--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -49,6 +49,22 @@ body {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
+		&-socials {
+			margin-top: 2em;
+			display: flex;
+		}
+		&-social {
+			padding: 0.5em;
+			margin-right: 1em;
+			&:hover ion-icon {
+				color: var(--darkred);
+			}
+			ion-icon {
+				font-size: 2.2rem;
+				color: var(--white);
+				transition: color 0.3s;
+			}
+		}
 		&-img {
 			padding: 0.5em;
 			height: 65px;
@@ -87,6 +103,7 @@ body {
 			padding: 1em;
 			text-transform: capitalize;
 			color: var(--white);
+			font-size: 1.35rem;
 			background-color: var(--red);
 			transition: background-color 0.3s, padding-left 0.2s;
 			&:hover {
@@ -234,30 +251,29 @@ body {
 			object-fit: contain;
 		}
 		&-list {
+			position: relative;
 			display: flex;
 			justify-content: center;
 			list-style: none;
 		}
 		&-item {
-			margin: 0 0.5em;
+			// margin: 0 0.5em;
 			position: relative;
 			background-color: transparent;
-			&:hover::before {
-				width: 100%;
-			}
-			&::before {
-				position: absolute;
-				content: '';
-				left: 50%;
-				height: 1.8px;
-				bottom: 14px;
-				width: 0;
-				transform: translateX(-50%);
-				background-color: var(--red);
-				transition: width 0.3s;
+
+			&:hover .nav__desktop-link {
+				color: var(--darkred);
 			}
 			&:nth-child(1),
 			&:nth-child(2) {
+				&:hover > .nav__desktop-dropdown {
+					opacity: 1;
+					visibility: visible;
+					pointer-events: auto;
+				}
+				&:hover::before {
+					width: 100%;
+				}
 				&::after {
 					position: absolute;
 					content: url(../icons/caret-down-outline.svg);
@@ -268,16 +284,65 @@ body {
 					transform: translateX(50%);
 					bottom: 5px;
 				}
+				&::before {
+					position: absolute;
+					content: '';
+					left: 50%;
+					height: 1.8px;
+					bottom: 14px;
+					width: 0;
+					transform: translateX(-50%);
+					background-color: var(--red);
+					transition: width 0.3s;
+				}
 			}
 		}
 		&-link {
 			display: block;
 			height: 100%;
 			width: 100%;
+			padding: 0 0.5em;
 			text-align: center;
 			color: var(--blue);
 			text-transform: uppercase;
 			line-height: 64px;
+			transition: color 0.3s;
+			cursor: pointer;
+		}
+		&-dropdown {
+			display: flex;
+			flex-direction: column;
+			position: absolute;
+			left: -100px;
+			width: 150px;
+			top: 64px;
+			background-color: var(--white);
+			box-shadow: 0 15px 15px -15px var(--navy);
+			list-style: none;
+			pointer-events: none;
+			opacity: 0;
+			transition: opacity 0.2s;
+			&--second {
+				left: -11px;
+			}
+			&-item {
+				&:hover .nav__desktop-dropdown-link {
+					color: var(--darkred);
+				}
+			}
+			&-link {
+				padding: 0.8em;
+				display: block;
+				width: 100%;
+				height: 100%;
+				text-transform: uppercase;
+				text-align: center;
+				color: var(--blue);
+				transition: color 0.3s, padding-left 0.15s;
+				&:hover {
+					padding-left: 1.2em;
+				}
+			}
 		}
 	}
 }
