finished header, changed mobile nav

--- a/src/sass/__components.scss
+++ b/src/sass/__components.scss
@@ -9,6 +9,10 @@
 	max-width: 1600px;
 }
 
+.section-title {
+	color: var(--white);
+}
+
 @media (min-width: 768px) {
 	.section-padding {
 		padding: 5em 3em;
