--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -22,6 +22,8 @@
 :root {
 	--navy: #041562;
 	--blue: #11468f;
+	--black: #0b090a;
+	--grey: #212529;
 	--red: #da1212;
 	--darkred: #921a1a;
 	--white: #eeeeee;
@@ -45,6 +47,7 @@ body {
 	top: 0;
 	box-shadow: 0 15px 15px -15px var(--navy);
 	background-color: var(--white);
+	z-index: 55555;
 	&__mobile {
 		display: flex;
 		justify-content: space-between;
@@ -82,10 +85,10 @@ body {
 			right: 0;
 			width: 75vw;
 			height: 100vh;
-			box-shadow: 0 0 8px var(--darkred);
+			box-shadow: 0 0 8px var(--black);
 			transform: translateX(100%);
 			transition: transform 0.3s ease-in;
-			background-color: var(--red);
+			background-color: var(--black);
 			list-style: none;
 		}
 		&-item {
@@ -104,7 +107,6 @@ body {
 			text-transform: capitalize;
 			color: var(--white);
 			font-size: 1.35rem;
-			background-color: var(--red);
 			transition: background-color 0.3s, padding-left 0.2s;
 			&:hover {
 				padding-left: 1.5em;
@@ -190,7 +192,7 @@ body {
 		display: flex;
 	}
 	&__dropdown-link {
-		background-color: var(--navy);
+		background-color: var(--grey);
 		border-bottom: 1px solid var(--darkred);
 	}
 
@@ -216,7 +218,7 @@ body {
 		position: fixed;
 		top: 0;
 		left: 0;
-		background-color: transparent;
+		background-color: var(--blue);
 		width: 100%;
 		z-index: 5;
 		border-bottom: 2px solid var(--red);
@@ -346,8 +348,145 @@ body {
 		}
 	}
 }
+// header
+.header {
+	position: relative;
+	width: 100%;
+	min-height: 100vh;
+	&__box {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+	&__img {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+		opacity: 0;
+		transition: opacity 0.5s;
+		background-position: center;
+		&-active {
+			opacity: 1;
+		}
+	}
+	&__controls {
+		position: absolute;
+		top: 40%;
+		transform: translateY(-50%);
+		left: 0;
+		width: 50px;
+	}
+	&__btn {
+		position: relative;
+		width: 50px;
+		height: 50px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: var(--white);
+		transition: 0.3s;
+		cursor: pointer;
+		&:hover {
+			background-color: var(--darkred);
+			&::before {
+				border-bottom: 3px solid var(--white);
+				border-left: 3px solid var(--white);
+			}
+		}
+		&::before {
+			content: '';
+			position: absolute;
+			width: 10px;
+			height: 10px;
+			transform: rotate(45deg);
+			border-left: 3px solid var(--darkred);
+			border-bottom: 3px solid var(--darkred);
+			transition: border-bottom 0.3s, border-left 0.3s;
+		}
+		&:nth-child(2)::before {
+			transform: rotate(225deg);
+		}
+	}
+	&__content {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		position: absolute;
+		bottom: 45px;
+		padding: 0.8em;
+		padding-left: 1.5em;
+		border-right: 2px solid var(--red);
+		border-bottom: 2px solid var(--red);
+		max-width: 75%;
+		background-color: rgba($color: #000000, $alpha: 0.75);
+	}
+	&__title {
+		margin-bottom: 0.25em;
+		color: var(--white);
+		font-size: 2.8rem;
+		font-weight: 700;
+	}
+	&__subtitle {
+		margin-bottom: 0.8em;
+		color: var(--white);
+		font-weight: 300;
+		font-size: 1.6rem;
+		font-style: italic;
+	}
+	&__link {
+		padding: 0.25em 1em;
+		text-transform: uppercase;
+		background-color: var(--white);
+		color: var(--blue);
+		transition: color 0.3s;
+		&:hover {
+			color: var(--darkred);
+		}
+	}
+}
+// main
+.main {
+}
 
 // media
+@media (min-width: 576px) {
+	.nav {
+	}
+	.header {
+		&__controls {
+			width: 65px;
+			top: 50%;
+		}
+		&__btn {
+			width: 65px;
+			height: 65px;
+			&::before {
+				width: 15px;
+				height: 15px;
+			}
+		}
+		&__content {
+			padding: 1.5em;
+			padding-left: 2.5em;
+			bottom: 100px;
+			max-width: 80%;
+		}
+		&__title {
+			font-size: 3rem;
+		}
+		&__subtitle {
+			font-size: 2.2rem;
+		}
+		&__link {
+			font-size: 2rem;
+		}
+	}
+}
 
 @media (min-width: 992px) {
 	.nav {
