--- a/src/sass/__components.scss
+++ b/src/sass/__components.scss
@@ -1,5 +1,14 @@
 .section-padding {
-	padding: 1em 0;
+	padding: 1.5em 2em;
+}
+
+.main {
+	.container {
+		margin: 0 auto;
+		padding: 0 1em 0 1.5em;
+		width: 100%;
+		max-width: 1600px;
+	}
 }
 
 .container {
@@ -10,14 +19,88 @@
 }
 
 .section-title {
+	margin-bottom: 0.8em;
+	letter-spacing: 0.3px;
+	text-transform: uppercase;
+	text-align: right;
+	font-size: 2.4rem;
 	color: var(--white);
+	.section-span {
+		color: var(--red);
+		border-bottom: 2px solid var(--red);
+	}
+}
+.section-subtitle {
+	position: absolute;
+	left: 0;
+	top: 35%;
+	font-size: 3rem;
+	font-family: 'Raleway', sans-serif;
+	text-transform: uppercase;
+	letter-spacing: 10px;
+	font-weight: 800;
+	color: transparent;
+	-webkit-text-stroke: 0.5px var(--white);
+	writing-mode: vertical-lr;
+	opacity: 0.5;
+	z-index: 50;
+	&::before {
+		content: '';
+		position: absolute;
+		right: -5px;
+		height: 100%;
+		background-color: var(--red);
+		width: 2px;
+	}
+}
+
+@media (min-width: 576px) {
+	.main {
+		.container {
+			padding: 0 2em;
+		}
+	}
+	.section-padding {
+		padding: 3em 2em;
+	}
+
+	.section-title {
+		font-size: 3rem;
+	}
+	.section-subtitle {
+		font-size: 3.3rem;
+	}
 }
 
 @media (min-width: 768px) {
 	.section-padding {
+		padding: 4em 2em;
+	}
+	.section-title {
+		font-size: 3.8rem;
+	}
+	.section-subtitle {
+		font-size: 3.5rem;
+	}
+}
+
+@media (min-width: 992px) {
+	.section-padding {
 		padding: 5em 3em;
 	}
-	.container {
-		padding: 0 3em;
+	.section-title {
+		font-size: 4.5rem;
+	}
+	.section-subtitle {
+		font-size: 4rem;
+	}
+}
+
+@media (min-width: 1400px) {
+	.section-title {
+		font-size: 6rem;
+	}
+	.section-subtitle {
+		font-size: 4.8rem;
 	}
 }
