--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -23,9 +23,10 @@
 	--navy: #041562;
 	--blue: #11468f;
 	--black: #0b090a;
-	--grey: #212529;
+	--lightblack: #212529;
 	--red: #da1212;
 	--darkred: #921a1a;
+	--gray: #d9d9d9;
 	--white: #eeeeee;
 }
 
@@ -37,7 +38,7 @@ html {
 body {
 	font-size: 1.6rem;
 	font-family: 'Roboto Condensed', sans-serif;
-	background-color: var(--blue);
+	background-color: var(--navy);
 }
 
 //nav mobile
@@ -192,7 +193,7 @@ body {
 		display: flex;
 	}
 	&__dropdown-link {
-		background-color: var(--grey);
+		background-color: var(--lightblack);
 		border-bottom: 1px solid var(--darkred);
 	}
 
@@ -449,8 +450,98 @@ body {
 		}
 	}
 }
-// main
-.main {
+// about
+.about {
+	position: relative;
+	background-color: var(--navy);
+	&__text {
+		margin-bottom: 0.5em;
+		line-height: 150%;
+		color: var(--white);
+	}
+	&__title {
+		position: relative;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		padding: 0.5em 1em;
+		margin-bottom: 0.5em;
+		font-size: 2rem;
+		background-color: var(--blue);
+		color: var(--white);
+		border-bottom: 2px solid var(--darkred);
+		z-index: 5;
+	}
+	&__btn {
+		position: relative;
+		padding: 0.5em 1em;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		width: 100%;
+		border: none;
+		background-color: var(--blue);
+		color: var(--white);
+		font-size: 2rem;
+		border-bottom: 2px solid var(--darkred);
+		transition: background-color 0.3s, color 0.3s;
+		z-index: 5;
+		cursor: pointer;
+		&::before {
+			position: absolute;
+			content: '';
+			width: 100%;
+			height: 0%;
+			top: 0;
+			left: 0;
+			background-color: var(--white);
+			transition: height 0.3s;
+			z-index: -10;
+		}
+		&:hover {
+			color: var(--red);
+			&::before {
+				height: 100%;
+			}
+		}
+		&:hover ion-icon {
+			color: var(--blue);
+		}
+	}
+	ion-icon {
+		margin: 0 0.3em;
+		color: var(--red);
+		transition: color 0.3s;
+	}
+	&__accordion {
+		&-tbody {
+		}
+		&-table {
+			padding: 1em;
+			opacity: 0;
+			background-color: var(--white);
+			margin: 0 auto;
+			transition: opacity 0.3s;
+			width: 100%;
+		}
+		&-tr {
+			display: flex;
+		}
+		&-th {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			margin: 0.15em;
+			padding: 0.5em 0.3em;
+			width: 100%;
+			color: var(--navy);
+			background-color: var(--gray);
+		}
+	}
+	.active-accordion .about__accordion-table {
+		opacity: 1;
+		visibility: visible;
+	}
 }
 
 // media
