--- a/src/sass/__components.scss
+++ b/src/sass/__components.scss
@@ -22,18 +22,23 @@
 	margin-bottom: 0.8em;
 	letter-spacing: 0.3px;
 	text-transform: uppercase;
-	text-align: right;
 	font-size: 2.4rem;
 	color: var(--white);
 	.section-span {
 		color: var(--red);
 		border-bottom: 2px solid var(--red);
 	}
+	&--first {
+		text-align: right;
+	}
+	&--second {
+		text-align: left;
+		color: var(--navy);
+	}
 }
 .section-subtitle {
 	position: absolute;
-	left: 0;
-	top: 35%;
+	top: 25%;
 	font-size: 3rem;
 	font-family: 'Raleway', sans-serif;
 	text-transform: uppercase;
@@ -42,15 +47,31 @@
 	color: transparent;
 	-webkit-text-stroke: 0.5px var(--white);
 	writing-mode: vertical-lr;
-	opacity: 0.5;
+	opacity: 0.8;
 	z-index: 50;
-	&::before {
-		content: '';
-		position: absolute;
-		right: -5px;
-		height: 100%;
-		background-color: var(--red);
-		width: 2px;
+
+	&--first {
+		left: 0;
+		&::before {
+			content: '';
+			position: absolute;
+			right: -5px;
+			height: 100%;
+			background-color: var(--red);
+			width: 2px;
+		}
+	}
+	&--second {
+		right: 0;
+		-webkit-text-stroke: 0.5px var(--navy);
+		&::before {
+			content: '';
+			position: absolute;
+			left: -5px;
+			height: 100%;
+			background-color: var(--red);
+			width: 2px;
+		}
 	}
 }
 
@@ -102,5 +123,6 @@
 	}
 	.section-subtitle {
 		font-size: 4.8rem;
+		letter-spacing: 30px;
 	}
 }
