--- a/src/sass/__mixins.scss
+++ b/src/sass/__mixins.scss
@@ -1,5 +1,6 @@
 @mixin btn {
 	padding: 0.25em 1em;
+	font-family: 'Roboto Condensed', sans-serif;
 	text-transform: uppercase;
 	background-color: var(--white);
 	color: var(--blue);
