--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -62,7 +62,7 @@ body {
 		}
 		&-social {
 			padding: 0.5em;
-			margin-right: 1em;
+			margin: 0 0.2em;
 			&:hover ion-icon {
 				color: var(--darkred);
 			}
@@ -815,6 +815,16 @@ body {
 		display: flex;
 		justify-content: flex-end;
 	}
+	&__textbox {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	&__info {
+		font-size: 2.2rem;
+		text-align: center;
+		color: var(--white);
+	}
 	&__boxes {
 		display: flex;
 		flex-direction: column;
@@ -836,7 +846,7 @@ body {
 	}
 	&__bottom {
 		position: relative;
-		padding-bottom: 20em;
+		padding-bottom: 25em;
 		height: 0;
 	}
 	iframe {
@@ -852,12 +862,97 @@ body {
 		&--youtube {
 			color: var(--darkred);
 		}
+		&--twitter {
+			color: #1da1f2;
+		}
 	}
 	&__title {
 		font-weight: 700;
 	}
 }
-
+//footer
+.footer {
+	background-color: var(--black);
+	&__boxes {
+		display: flex;
+		flex-direction: column;
+	}
+	&__box {
+		display: flex;
+		flex-direction: column;
+		margin-bottom: 0.8em;
+	}
+	&__logo {
+		margin-bottom: 0.8em;
+		width: 200px;
+		height: 50px;
+	}
+	&__img {
+		object-fit: contain;
+		height: 100%;
+		width: 100%;
+	}
+	&__brand {
+		margin-bottom: 0.5em;
+		color: var(--white);
+		text-transform: uppercase;
+		font-weight: 700;
+		font-size: 2.2rem;
+	}
+	&__motto {
+		color: var(--gray);
+		font-style: italic;
+		font-size: 1.6rem;
+	}
+	&__menu {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		&-link {
+			width: 100%;
+			padding: 0.5em;
+			margin: 0.3em;
+			color: var(--gray);
+			font-size: 1.7rem;
+			border-bottom: 1px solid var(--lightblack);
+			transition: color 0.3s, border-bottom 0.3s;
+			&:hover {
+				color: var(--red);
+				border-bottom: 1px solid var(--darkred);
+			}
+		}
+	}
+	&__socials {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		&-title {
+			font-size: 2.2rem;
+			text-transform: uppercase;
+			font-weight: 700;
+			color: var(--white);
+		}
+		&-link {
+			display: flex;
+			align-items: center;
+			width: 100%;
+			padding: 0.5em;
+			margin: 0.3em;
+			font-size: 1.7rem;
+			color: var(--gray);
+			border-bottom: 1px solid var(--lightblack);
+			transition: color 0.3s, border-bottom 0.3s;
+			&:hover {
+				color: var(--red);
+				border-bottom: 1px solid var(--darkred);
+			}
+		}
+		&-icon {
+			margin-right: 0.3em;
+			color: var(--white);
+		}
+	}
+}
 // media
 @media (min-width: 576px) {
 	.header {
@@ -945,6 +1040,36 @@ body {
 			width: 30%;
 		}
 	}
+	.footer {
+		&__logo {
+			height: 60px;
+			width: 250px;
+			margin-bottom: 1.2em;
+		}
+		&__img {
+			height: 100%;
+			width: 100%;
+		}
+		&__brand {
+			font-size: 2.5rem;
+		}
+		&__motto {
+			font-size: 1.8rem;
+		}
+		&__menu {
+			&-link {
+				font-size: 1.7rem;
+			}
+		}
+		&__socials {
+			&-title {
+				font-size: 2.3rem;
+			}
+			&-link {
+				font-size: 1.7rem;
+			}
+		}
+	}
 }
 
 @media (min-width: 992px) {
@@ -987,6 +1112,56 @@ body {
 		.active-accordion .about__accordion-table {
 			opacity: 0;
 			visibility: hidden;
+		}
+	}
+	.socials {
+		&__boxes {
+			flex-direction: row;
+		}
+	}
+	.footer {
+		&__boxes {
+			flex-direction: row;
+			align-items: flex-end;
+			justify-content: center;
+		}
+		&__box {
+			margin: 0;
+			&--logo {
+				align-self: center;
+			}
+			&--sitemap {
+				margin: 0 3em;
+			}
+		}
+		&__logo {
+			height: 60px;
+			width: 350px;
+			margin-bottom: 1.2em;
+		}
+		&__img {
+			height: 100%;
+			width: 100%;
+		}
+		&__brand {
+			font-size: 3rem;
+		}
+		&__motto {
+			font-size: 2.2rem;
+		}
+		&__menu {
+			&-link {
+				font-size: 1.8rem;
+			}
+		}
+		&__socials {
+			&-title {
+				font-size: 2.5rem;
+				white-space: nowrap;
+			}
+			&-link {
+				font-size: 1.8rem;
+			}
 		}
 	}
 }
