--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1073,6 +1073,69 @@ body {
 		width: 100%;
 	}
 }
+//calendar
+.calendar {
+	position: relative;
+	.section-title {
+		border-bottom: 2px solid var(--darkred);
+	}
+
+	&__month {
+		margin-bottom: 1.5em;
+		display: flex;
+		align-items: center;
+		position: relative;
+		white-space: nowrap;
+		font-size: 1.8rem;
+		color: var(--white);
+		&::after {
+			content: '';
+			position: relative;
+			width: 90%;
+			height: 1px;
+			background-color: var(--blue);
+			left: 10px;
+		}
+	}
+	&__box {
+		margin-bottom: 1em;
+		display: flex;
+		align-items: stretch;
+		background-color: var(--white);
+		border-bottom: 2px solid var(--darkred);
+	}
+	&__date {
+		padding: 0.5em;
+		margin-right: 1em;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		background-color: var(--red);
+	}
+	&__day {
+		margin-bottom: 0.15em;
+		color: var(--gray);
+		text-transform: uppercase;
+		font-weight: 300;
+	}
+	&__number {
+		color: var(--white);
+		font-weight: 700;
+	}
+	&__info {
+		padding: 0.5em;
+		display: flex;
+		flex-direction: column;
+		color: var(--black);
+	}
+	&__dates,
+	&__event,
+	&__place {
+		margin-bottom: 0.3em;
+		font-weight: 700;
+	}
+}
 //footer
 .footer {
 	background-color: var(--black);
