--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,7 +14,8 @@
 }
 *a,
 *button,
-*input {
+*input,
+*textarea {
 	outline: none;
 }
 
@@ -1252,6 +1253,111 @@ body {
 	.section-title {
 		border-bottom: 2px solid var(--darkred);
 	}
+	&__boxes {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+		justify-content: center;
+	}
+	&__informations {
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
+	}
+	&__box {
+		display: flex;
+		flex-direction: column;
+		&-info {
+			margin-bottom: 1em;
+		}
+		&-address {
+			margin-bottom: 1em;
+		}
+	}
+	&__form {
+		width: 100%;
+		&-body {
+			display: flex;
+			flex-direction: column;
+		}
+		&-top,
+		&-middle,
+		&-bottom {
+			display: flex;
+			flex-direction: column;
+		}
+	}
+	&__text {
+		margin-bottom: 0.5em;
+		color: var(--white);
+	}
+	&__link {
+		position: relative;
+		margin-bottom: 1em;
+		display: flex;
+		align-items: center;
+		color: var(--white);
+		text-decoration: none;
+		transition: color 0.3s;
+		&:hover {
+			color: var(--gray);
+		}
+		&:hover::before {
+			width: 100%;
+			background-color: var(--darkred);
+		}
+		&::before {
+			position: absolute;
+			content: '';
+			bottom: -10px;
+			left: 0;
+			width: 20px;
+			height: 2px;
+			background-color: var(--blue);
+			transform-origin: right;
+			transition: width 0.5s, background-color 0.3s;
+		}
+	}
+	&__icon {
+		margin-right: 0.3em;
+		font-size: 2rem;
+		color: var(--red);
+	}
+	&__input,
+	&__textarea {
+		padding: 0.5em 0.8em;
+		margin-bottom: 0.8em;
+		background-color: transparent;
+		border: none;
+		border-bottom: 1px solid var(--blue);
+		font-family: 'Roboto Condensed', sans-serif;
+		font-size: 1.6rem;
+		color: var(--white);
+		transition: border-bottom 0.3s;
+		&::placeholder {
+			color: var(--gray);
+		}
+		&:focus {
+			border-bottom: 1px solid var(--darkred);
+		}
+	}
+	&__textarea {
+		margin-bottom: 1.5em;
+		resize: vertical;
+		min-height: 100px;
+	}
+	&__btn {
+		@include btn;
+		background-color: var(--red);
+		color: var(--white);
+		padding: 1em 2em;
+		transition: background-color 0.3s, color 0.3s;
+		font-weight: 700;
+		&:hover {
+			background-color: var(--white);
+			color: var(--navy);
+		}
+	}
 }
 //footer
 .footer {
@@ -1517,6 +1623,22 @@ body {
 			}
 		}
 	}
+	.contact {
+		&__text,
+		&__link {
+			font-size: 1.8rem;
+		}
+		&__icon {
+			font-size: 2.3rem;
+		}
+		&__input,
+		&__textarea {
+			font-size: 1.6rem;
+		}
+		&__btn {
+			font-size: 1.6rem;
+		}
+	}
 	.footer {
 		&__logo {
 			height: 60px;
@@ -1685,6 +1807,29 @@ body {
 			width: 95%;
 		}
 	}
+	.contact {
+		&__boxes {
+			flex-direction: row;
+		}
+		&__informations {
+			width: 45%;
+		}
+		&__form {
+			width: 55%;
+		}
+		&__text,
+		&__link {
+			font-size: 2rem;
+		}
+		&__icon {
+			font-size: 2.5rem;
+		}
+		&__input,
+		&__textarea,
+		&__btn {
+			font-size: 1.8rem;
+		}
+	}
 	.footer {
 		&__boxes {
 			flex-direction: row;
@@ -1789,6 +1934,14 @@ body {
 			&--table {
 				width: 100%;
 			}
+		}
+	}
+	.contact {
+		&__informations {
+			width: 35%;
+		}
+		&__form {
+			width: 65%;
 		}
 	}
 }
