--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1134,6 +1134,7 @@ body {
 		padding: 0.5em;
 		display: flex;
 		flex-direction: column;
+		align-items: flex-start;
 		width: 85%;
 		color: var(--black);
 	}
@@ -1145,6 +1146,28 @@ body {
 	}
 	&__dates {
 		font-size: 1.3rem;
+	}
+	&__event {
+		position: relative;
+		margin: 0.5em 0;
+		color: var(--black);
+		transition: color 0.3s;
+		&:hover {
+			color: var(--navy);
+		}
+		&::after {
+			content: '';
+			position: absolute;
+			bottom: -3px;
+			left: 0;
+			height: 2px;
+			width: 20px;
+			background-color: var(--darkred);
+			transition: width 0.5s;
+		}
+		&:hover::after {
+			width: 100%;
+		}
 	}
 	&__event,
 	&__description,
@@ -1244,6 +1267,81 @@ body {
 		&:hover {
 			background-color: var(--white);
 			color: var(--navy);
+		}
+	}
+}
+//event
+.event {
+	position: relative;
+	.section-title {
+		border-bottom: 2px solid var(--darkred);
+	}
+	&__boxes {
+		display: flex;
+		flex-direction: column;
+	}
+	&__box {
+		display: flex;
+		flex-direction: column;
+		margin-bottom: 0.5em;
+	}
+	&__details,
+	&__organizer,
+	&__category {
+		margin-bottom: 1em;
+	}
+	&__media {
+		display: flex;
+	}
+	&__text {
+		color: var(--gray);
+		margin-bottom: 0.5em;
+		&-title {
+			font-size: 2rem;
+			margin-bottom: 1em;
+		}
+		&-top {
+			text-transform: uppercase;
+			color: var(--white);
+			font-weight: 700;
+		}
+		&-category,
+		&-mail {
+			font-weight: 700;
+			color: var(--red);
+			position: relative;
+			&::after {
+				content: '';
+				position: absolute;
+				bottom: -5px;
+				left: 0;
+				content: '';
+				width: 20px;
+				height: 2px;
+				background-color: var(--blue);
+				transition: width 0.5s;
+			}
+			&:hover::after {
+				width: 100%;
+			}
+		}
+	}
+	&__link {
+		padding: 0.8em 0.5em;
+		color: var(--navy);
+		background-color: var(--white);
+		font-size: 1.5rem;
+		transition: background-color 0.3s, box-shadow 0.25s, padding-left 0.2s;
+		&:hover {
+			background-color: var(--gray);
+			padding-left: 1.5em;
+			box-shadow: 20px 0px 0 var(--red) inset;
+		}
+		&-icon {
+			font-size: 2.3rem;
+			margin-right: 0.3em;
+			color: var(--darkred);
+			vertical-align: middle;
 		}
 	}
 }
@@ -1623,6 +1721,35 @@ body {
 			}
 		}
 	}
+	.event {
+		&__box {
+			flex-direction: row;
+		}
+		&__details,
+		&__organizer,
+		&__category {
+			margin-right: 1em;
+			margin-bottom: 2em;
+		}
+		&__left,
+		&__right {
+			width: 50%;
+		}
+		&__text {
+			font-size: 1.8rem;
+			&-title {
+				font-size: 2.4rem;
+			}
+		}
+		&__link {
+			display: flex;
+			align-items: center;
+			font-size: 1.8rem;
+			&-icon {
+				font-size: 2.6rem;
+			}
+		}
+	}
 	.contact {
 		&__text,
 		&__link {
@@ -1797,6 +1924,17 @@ body {
 			display: flex;
 			flex-direction: column;
 			align-items: center;
+		}
+	}
+	.event {
+		&__text {
+			font-size: 2rem;
+			&-title {
+				font-size: 2.8rem;
+			}
+		}
+		&__link {
+			font-size: 2rem;
 		}
 	}
 	.calendar {
